--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,4 +93,12 @@
 
     <string name="task">我的任务</string>
 
+    <string name="pop_add_voice_action">点击纪录</string>
+    <string name="pop_add_tv_cancel">算了吧</string>
+    <string name="pop_add_tv_ok">添加</string>
+
+    <string name="error_no_sdcard">没有SD卡，无法存储录音数据</string>
+    <string name="error_state_record">正在录音中，请先停止录音</string>
+    <string name="error_unknown">无法识别的错误</string>
+
 </resources>
