--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,4 +101,12 @@
     <string name="error_state_record">正在录音中，请先停止录音</string>
     <string name="error_unknown">无法识别的错误</string>
 
+
+    <string name="project">项目</string>
+    <string name="pro_tv_btn_item1">首页</string>
+    <string name="pro_tv_btn_item2">统计</string>
+    <string name="pro_tv_btn_item3">任务</string>
+    <string name="pro_tv_btn_item4">团队</string>
+    <string name="pro_tv_btn_item5">文件</string>
+
 </resources>
