--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,5 +124,7 @@
     <string name="log_dia_register_fai">注册失败</string>
     <string name="log_dia_login_ing">登陆ing。。。</string>
     <string name="log_dia_login_suc">登陆成功</string>
+    <string name="acc_dialog_uppic">正在上传。。。。</string>
+    <string name="acc_dialog_savedata">正在保存信息。。。</string>
 
 </resources>
