--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,7 +50,6 @@
     <string name="acc_dialog_title2">修改的信息还没有保存哦！</string>
     <string name="acc_dialog_ok">去相册</string>
 
-    <string name="addtask">添加任务</string>
 
     <string name="login">登陆</string>
     <string name="log_et_username">用户名</string>
@@ -105,10 +104,10 @@
 
     <string name="project">项目</string>
     <string name="pro_tv_btn_item1">首页</string>
-    <string name="pro_tv_btn_item2">统计</string>
-    <string name="pro_tv_btn_item3">任务</string>
-    <string name="pro_tv_btn_item4">团队</string>
-    <string name="pro_tv_btn_item5">文件</string>
+    <string name="pro_tv_btn_item2">任务</string>
+    <string name="pro_tv_btn_item3">文件</string>
+    <string name="pro_tv_btn_item4">统计</string>
+    <string name="pro_tv_btn_item5">团队</string>
 
 
 
@@ -135,5 +134,23 @@
     <string name="loding">加载中。。。</string>
     <string name="lode_fail">加载失败</string>
     <string name="team">团队</string>
+    <string name="add">添加</string>
+    <string name="pro_item2_group_mytask">我的任务</string>
+    <string name="pro_item2_group_othertask">其他任务</string>
+    <string name="pub_taskname">任务名：</string>
+    <string name="publish">发布</string>
+    <string name="note">笔记</string>
+    <string name="pub_performer">执行者：</string>
+    <string name="pub_endtime">截止日期：</string>
+    <string name="pub_notename">笔记名：</string>
+    <string name="pub_addalarm">添加提醒：</string>
+    <string name="pub_alarmtime">提醒时间：</string>
+    <string name="publish_ing">正在发布。。。</string>
+    <string name="publish_succ">发布成功</string>
+    <string name="pub_project_name">项目：</string>
+    <string name="pub_participation">参与者：</string>
+    <string name="clear">清除</string>
+    <string name="choseall">全选</string>
+    <string name="no_man">0人</string>
 
 </resources>
