完善任务和笔记获取

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,6 +77,10 @@
         <item>十二月</item>
     </string-array>
 
+    <string-array name="dynamic_type">
+        <item>创建了项目</item>
+    </string-array>
+
 
     <string name="achievement">我的成就</string>
     <string name="ach_tv_type1">偶像派</string>
